--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 Video/1_Solution_Hard.mp4 filter=lfs diff=lfs merge=lfs -text
+Video/2_Solution_Easy.mp4 filter=lfs diff=lfs merge=lfs -text
+*.mov filter=lfs diff=lfs merge=lfs -text
+Video/MIT_CS_video.mov filter=lfs diff=lfs merge=lfs -text
